# Sentinel

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/sentinel/: __init__.py  cli.py
src/sentinel/ai/: __init__.py  reviewer.py
src/sentinel/analysis/: __init__.py  callgraph.py  complexity.py  engine.py  globals.py  nesting.py  recursion.py
src/sentinel/parser/: __init__.py  ast_extractor.py
src/sentinel/reporting/: __init__.py  markdown.py
src/sentinel/scoring/: __init__.py  maintainability.py
tests/: __init__.py  test_parser.py
